# loadpilot

./: .dockerignore  .gitignore  Dockerfile.agent  Dockerfile.coordinator  LICENSE  README.md  SECURITY.md  install.sh  justfile
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
bench/: Dockerfile.loadpilot  Dockerfile.loadpilot.dockerignore  Dockerfile.loadpilot.py312  collect_stats.py  docker-compose.yml  report.py  run.sh
bench/scenarios/max/: k6.js  loadpilot.py  locust.py  pyo3.py
bench/scenarios/precision/: k6.js  loadpilot.py  locust.py  pyo3.py
bench/scenarios/pyo3/: loadpilot.py  sync_test.py
cli/: .env.example  hatch_build.py  pyproject.toml
cli/loadpilot/: __init__.py  _bridge.py  _compare.py  _coordinator.py  _display.py  _init.py  _k8s.py  _knee.py  _plan_builder.py  _results.py  _runner.py  _tui.py  cli.py  client.py  dsl.py  models.py  report.py
cli/loadpilot/charts/loadpilot/: Chart.yaml  values.yaml
cli/loadpilot/charts/loadpilot/files/: grafana-dashboard.json
cli/loadpilot/charts/loadpilot/templates/: NOTES.txt  _helpers.tpl  agent.yaml  coordinator.yaml  monitoring.yaml  nats.yaml  secrets.yaml  tests.yaml
cli/loadpilot/templates/monitoring/: docker-compose.yml  grafana-dashboard.json
cli/scenarios/: example.py
cli/tests/: _helpers.py  test_bridge.py  test_cli_plan.py  test_client.py  test_dsl.py  test_e2e_smoke.py  test_integration.py  test_knee.py  test_models.py  test_report.py
docs/: _config.yml  architecture.md  benchmark.md  book.toml  cli-reference.md  development.md  distributed.md  dsl-reference.md  getting-started.md  index.md
docs/src/: SUMMARY.md  architecture.md  benchmark.md  cli-reference.md  development.md  distributed.md  dsl-reference.md  getting-started.md  introduction.md  monitoring.md
engine/: Cargo.toml  Dockerfile.agent  Dockerfile.coordinator
engine/.cargo/: config.toml
engine/agent/: Cargo.toml
engine/agent/src/: agent.rs  main.rs  nats.rs  python_bridge.rs  runner.rs  terminal.rs  worker.rs
engine/coordinator/: Cargo.toml
engine/coordinator/src/: broker.rs  coordinator.rs  distributed.rs  main.rs  metrics.rs  nats_client.rs  plan.rs  prometheus_server.rs  python_bridge.rs  serve.rs
engine/coordinator/src/coordinator/: scheduler.rs  tests.rs
engine/coordinator/src/distributed/: tests.rs  wire.rs
engine/coordinator/src/python_bridge/: client.rs  response.rs  vuser.rs
engine/nats-client/: Cargo.toml
engine/nats-client/src/: lib.rs
examples/: basic_scenario.py
