[project]
name = "loadpilot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "typer",
    "httpx",
    "pydantic",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "anyio[trio]",
]

[project.scripts]
loadpilot = "loadpilot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
# hatch_build.py is picked up automatically by hatchling.

[tool.hatch.build.targets.wheel]
# Include the coordinator binary (placed there by the build hook).
# The glob covers both Linux/macOS (coordinator) and Windows (coordinator.exe).
packages = ["loadpilot"]
artifacts = ["loadpilot/coordinator", "loadpilot/coordinator.exe"]

[tool.ruff]
line-length = 100
