[project]
name = "loadpilot"
version = "0.1.7"
requires-python = ">=3.12"
license = { text = "MIT" }
readme = "README.md"
description = "Write load tests in Python. Run them at Rust speed."
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Traffic Generation",
]

dependencies = [
    "typer",
    "httpx",
    "pydantic",
    "rich",
    "questionary",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-timeout>=2",
    "pytest-xdist>=3",
    "anyio[trio]",
    "pytest-cov>=5",
    "coverage>=7",
    "ruff>=0.9",
    "pip-audit>=2",
]

[project.scripts]
loadpilot = "loadpilot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
# hatch_build.py is picked up automatically by hatchling.

[tool.hatch.build.targets.wheel]
# Include the coordinator binary (placed there by the build hook).
# The glob covers both Linux/macOS (coordinator) and Windows (coordinator.exe).
packages = ["loadpilot"]
artifacts = [
    "loadpilot/coordinator",
    "loadpilot/coordinator.exe",
    "loadpilot/templates/monitoring/docker-compose.yml",
    "loadpilot/templates/monitoring/grafana-dashboard.json",
    "loadpilot/charts/**/*",
]

[tool.pytest.ini_options]
addopts = "--cov=loadpilot --cov-report=term-missing --cov-report=html:htmlcov"
markers = [
    "e2e: smoke e2e tests covering all run modes (fast, needs coordinator binary)",
]

[tool.coverage.run]
omit = ["tests/*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort
ignore = ["E501"]           # line-length is checked by formatter, not linter

