[package]
name = "agent"
version = "0.1.7"
edition = "2021"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "http2"], default-features = false }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
nats-client = { path = "../nats-client" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
