[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coordinator"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
pyo3 = { version = "0.28", features = ["auto-initialize"] }
