[package]
name = "coordinator"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "coordinator"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "http2"], default-features = false }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
pyo3 = { version = "0.28", features = ["auto-initialize"] }
nats-client = { path = "../nats-client" }
tokio-stream = "0.1"
futures = "0.3"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
